# CowEngine

./: .dockerignore  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  CNAME  DEPLOYMENT.md  README.md  cow_mesh.hpp  imgui.ini  vcpkg.json
.github/workflows/: backend.yml  static.yml
deploy/: .env.example  Dockerfile.server  Dockerfile.sidecar  deploy.sh  docker-compose.prod.yml  docker-compose.yml  install-certs.sh
deploy/landing/: index.html
glad/include/glad/: glad.h
glad/src/: glad.c
include/: Application.hpp  Camera.hpp  CodeEditor.hpp  ColliderDebugDrawer.hpp  EditorUI.hpp  EmbeddedTemplate.hpp  ImGuiLayer.hpp  InputHandler.hpp  PhysicsWorld.hpp  Scene.hpp  Shader.hpp  Window.hpp
include/app/: Application.hpp  CodeEditor.hpp  EditorUI.hpp  GameBuilder.hpp
include/core/: Camera.hpp  EngineConfig.hpp  InputHandler.hpp  Scene.hpp
include/ecs/: ComponentOps.hpp  Components.hpp  Entity.hpp  EntityHandle.hpp  Factories.hpp  InputKeys.hpp
include/ecs/systems/: LocalInputSystem.hpp  NametagSystem.hpp  PhysicsSyncSystem.hpp  PlayerInputSystem.hpp  RenderSystem.hpp  ScriptSystem.hpp
include/editor/: EditorContext.hpp
include/editor/panels/: ConsolePanel.hpp  FileBrowserPanel.hpp  HierarchyPanel.hpp  InspectorPanel.hpp  RuntimePanel.hpp  StatsPanel.hpp  VfxPanel.hpp  WorkspacePanel.hpp
include/meshes/: AssetManager.hpp  CircleMesh.hpp  CubeMesh.hpp  Mesh.hpp  PlaneMesh.hpp  StaticMesh.hpp
include/net/: ByteIO.hpp  ITransport.hpp  NetClient.hpp  Protocol.hpp  UdpLink.hpp  WebClientTransport.hpp
include/objects/: Cube.hpp  Object.hpp  Plane.hpp  Player.hpp  StaticObject.hpp
include/platform/: GLHeadless.hpp  ImGuiLayer.hpp  Window.hpp  imgui_impl_emscripten.h
include/render/: PostFX.hpp  Shader.hpp  TextRenderer.hpp  VfxSettings.hpp
include/rooms/: BasicRoom.hpp  Room.hpp
include/script/: CowScript.hpp  ScriptHost.hpp
include/server/: GameServer.hpp
models/: source.txt
scenes/: scene.json
scripts/: despawn_after.cow  obj_to_mesh.py  player_movement.cow  shoot_cow.cow  svg_to_png.py
scripts/cow/: jump_on_space.cow  spin.cow
sidecar/: Cargo.toml  README.md
sidecar/src/: main.rs  webtransport.rs
src/: Application.cpp  Camera.cpp  CodeEditor.cpp  ColliderDebugDrawer.cpp  EditorTemplate.html  EditorUI.cpp  EmbeddedTemplate_web.cpp  GameBuilder.cpp  GameTemplate.html  ImGuiLayer.cpp  InputHandler.cpp  PhysicsWorld.cpp  PlaygroundTemplate.html  PostFX.cpp  Scene.cpp  Shader.cpp  Window.cpp  help.md  imgui_impl_emscripten.cpp  main.cpp
src/app/: Application.cpp  CodeEditor.cpp  EditorUI.cpp  GameBuilder.cpp  main.cpp
src/core/: Camera.cpp  InputHandler.cpp  PhysicsWorld.cpp  Scene.cpp
src/ecs/: ComponentOps.cpp  Factories.cpp
src/ecs/systems/: LocalInputSystem.cpp  NametagSystem.cpp  PhysicsSyncSystem.cpp  PlayerInputSystem.cpp  RenderSystem.cpp  ScriptSystem.cpp
src/editor/: EditorContext.cpp
src/editor/panels/: ConsolePanel.cpp  FileBrowserPanel.cpp  HierarchyPanel.cpp  InspectorPanel.cpp  RuntimePanel.cpp  StatsPanel.cpp  VfxPanel.cpp  WorkspacePanel.cpp
src/meshes/: AssetManager.cpp  CircleMesh.cpp  CubeMesh.cpp  PlaneMesh.cpp  StaticMesh.cpp
src/net/: NetClient.cpp  Protocol.cpp  UdpLink.cpp  WebClientTransport.cpp
src/objects/: Cube.cpp  Object.cpp  Plane.cpp  Player.cpp  StaticObject.cpp
src/platform/: ImGuiLayer.cpp  Window.cpp  imgui_impl_emscripten.cpp
src/render/: ColliderDebugDrawer.cpp  PostFX.cpp  Shader.cpp  TextRenderer.cpp
src/rooms/: BasicRoom.cpp
src/script/: CowScript.cpp  ScriptHost.cpp
src/server/: GameServer.cpp  main.cpp
src/shaders/: bloom_blur_frag.glsl  bloom_composite_frag.glsl  bloom_extract_frag.glsl  fragment.glsl  fullscreen_vert.glsl  sky_vaporwave_frag.glsl  text_frag.glsl  text_vert.glsl  vertex.glsl
src/templates/: EditorTemplate.html  EmbeddedTemplate_web.cpp  GameTemplate.html  help.md
test/: netclient_test.cpp  script_lifetime_test.cpp  script_spawn_test.cpp  server_names_test.cpp
tools/embed/: bin2c.cpp
