[package]
name = "cowengine-sidecar"
version = "0.1.0"
edition = "2021"
description = "WebTransport/WebSocket <-> UDP relay in front of the CowEngine headless server"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
# WebTransport support is added in a second stage; kept optional so the WS
# relay compiles fast on its own.
wtransport = { version = "0.6", optional = true }
base64 = { version = "0.22", optional = true }
anyhow = { version = "1", optional = true }
# TLS for the WebSocket listener (wss://), required to connect from an https
# origin like cowengine.com. Uses the ring crypto provider so it builds without
# nasm/aws-lc toolchain fuss. Optional so the plain-ws dev build stays lean.
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"], optional = true }
rustls-pemfile = { version = "2", optional = true }

[features]
default = []
webtransport = ["dep:wtransport", "dep:base64", "dep:anyhow"]
tls = ["dep:tokio-rustls", "dep:rustls-pemfile"]

[[bin]]
name = "cowengine-sidecar"
path = "src/main.rs"
